Fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Marcellus");
+@import url('https://fonts.googleapis.com/css?family=Marcellus');
 
 html,
 #root {
@@ -8,7 +8,7 @@ html,
 body {
   margin: 0;
   padding: 0;
-  font-family: "Marcellus", serif;
+  font-family: 'Marcellus', serif;
   font-size: 12px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -83,4 +83,8 @@ table tr {
   padding: 0;
   display: block;
   width: 100%;
+}
+
+.section {
+  max-width: 640px;
 }
